--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skil3e/gatsby-source-firestore",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "Gatsby source plugin for Firestore",
   "main": "index.js",
   "keywords": [
@@ -21,7 +21,7 @@
   "author": "Skil3e",
   "license": "MIT",
   "dependencies": {
-    "firebase": "^7.19.1"
+    "firebase-admin": "^9.1.1"
   },
   "repository": {
     "type": "git",
